Fix some colors and spacing

--- a/static/style/additional.css
+++ b/static/style/additional.css
@@ -3,7 +3,7 @@ h2, h3, h4, h5 {
 }
 
 h3 {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid rgb(90, 90, 90);
 }
 
 .mtg-card-tooltip img {
@@ -123,7 +123,11 @@ h3 {
 .cube-listing section {
     padding-bottom: 1em;
     margin-bottom: 1em;
-    border-bottom: 1px dotted black;
+    border-bottom: 1px dotted rgb(90, 90, 90);
+}
+
+.cube-listing h2 {
+    margin-top: 0.83em;
 }
 
 .cube-listing .cube-status {
